--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
         <td><%= image.title %></td>
         <td><%= image.caption %></td>
+        <td><%= image_tag image.data.url, size: '100x100' %></td>
         <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
         <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
