--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -9,6 +9,7 @@
   <strong>Caption:</strong>
   <%= @image.caption %>
 </p>
+<%= image_tag @image.data.url %>
+<br>
 
-<%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
