--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,29 +1,20 @@
 <h1>Listing images</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Caption</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<div class="wrap">
 
-  <tbody>
-    <% @images.each do |image| %>
-      <tr>
-        <td><%= image.title %></td>
-        <td><%= image.caption %></td>
-        <td><%= image_tag image.data.url, size: '100x100' %></td>
-        <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Image', new_image_path %>
+  <!-- Define all of the tiles: -->
+  <div class="box">
+    <div class="boxInner">
+      <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/7.jpg" />
+      <div class="titleBox">Butterfly</div>
+    </div>
+  </div>
+  <% @images.each do |image| %>
+    <div class="box">
+      <div class="boxInner">
+        <%= image_tag image.data.url %>
+        <div class="titleBox"><%= image.title.to_s %></div>
+      </div>
+    </div>
+  <% end %>
+</div>
