Implement file upload on TargetImage model
- Add 'data' column related to paperclip
- Add the 'data' member in TargetImage model
- Add a file-upload form(non-validated)
- Change templates to show images

--- a/app/views/target_images/show.html.erb
+++ b/app/views/target_images/show.html.erb
@@ -4,6 +4,8 @@
   <strong>Title:</strong>
   <%= @target_image.title %>
 </p>
-
 <%= link_to 'Edit', edit_target_image_path(@target_image) %> |
 <%= link_to 'Back', target_images_path %>
+<br>
+
+<%= image_tag @target_image.data.url %>
