--- a/app/views/target_images/_form.html.erb
+++ b/app/views/target_images/_form.html.erb
@@ -15,6 +15,11 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <div class="upload_field">
+    <%= f.label :data %><br>
+    <%= f.file_field :data %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
