--- a/app/views/target_images/index.html.erb
+++ b/app/views/target_images/index.html.erb
@@ -1,27 +1,18 @@
 <h1>Listing target_images</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @target_images.each do |target_image| %>
-      <tr>
-        <td><%= target_image.title %></td>
-        <td><%= link_to 'Show', target_image %></td>
-        <td><%= link_to 'Edit', edit_target_image_path(target_image) %></td>
-        <td><%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<!-- Define all of the tiles: -->
+<% @target_images.each do |target_image| %>
+  <div class="box">
+    <div class="boxInner">
+      <%= link_to 'Show', target_image %>
+      <%= link_to 'Edit', edit_target_image_path(target_image) %>
+      <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= image_tag target_image.data.url %>
+      <div class="titleBox"><%= target_image.title.to_s %></div>
+    </div>
+  </div>
+<% end %>
 
 <br>
-
+<br>
 <%= link_to 'New Target image', new_target_image_path %>
