Link to the prefer action
Access preferred images like this:
http://localhost:3000/target_images/1/prefer

--- a/app/views/target_images/index.html.erb
+++ b/app/views/target_images/index.html.erb
@@ -5,6 +5,7 @@
   <div class="box">
     <div class="boxInner">
       <%= link_to 'Show', target_image %>
+      <%= link_to 'Prefer', prefer_target_image_path(target_image) %>
       <%= link_to 'Edit', edit_target_image_path(target_image) %>
       <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
       <%= image_tag target_image.data.url %>
