--- a/app/views/target_images/show.html.erb
+++ b/app/views/target_images/show.html.erb
@@ -8,4 +8,10 @@
 <%= link_to 'Back', target_images_path %>
 <br>
 
+<p>
+  <strong>Face feature:</strong>
+  <%= @target_image.face_feature %>
+</p>
+
+<br>
 <%= image_tag @target_image.data.url %>
