--- a/app/views/target_images/prefer.html.erb
+++ b/app/views/target_images/prefer.html.erb
@@ -8,9 +8,18 @@
   <%= @target_hsv %>
 </p>
 
+<!--
+<ul class="boxline">
+<% @preferred.each do |image| %>
+  <li>
+    <%= image_tag image[:image].data.url %>
+    <div class="titleBox"><%= image[:image].title.to_s %></div>
+    <%= image[:hsv] %>
+  </li>
+<% end %>
+</ul>
+-->
 <div class="wrap">
-
-  <!-- Define all of the tiles: -->
   <% @preferred.each do |image| %>
     <div class="box">
       <div class="boxInner">
