refs #4 Use thumbnail when showing images
- Setup thumnails
- Fix the url bug
- Fix routes.rb

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -3,7 +3,7 @@
 <ul class="boxline">
 <% @images.each do |image| %>
   <li>
-    <%= image_tag image.data.url %>
+    <%= image_tag image.data.url(:thumb) %>
   </li>
 <% end %>
 </ul>
