--- a/app/views/target_images/index.html.erb
+++ b/app/views/target_images/index.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'Prefer', prefer_target_image_path(target_image) %>
       <%= link_to 'Edit', edit_target_image_path(target_image) %>
       <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
-      <%= image_tag target_image.data.url %>
+      <%= link_to(image_tag(target_image.data.url), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
       <div class="titleBox"><%= target_image.title.to_s %></div>
     </div>
   </div>
