refs #19 Add link to images in prefer template
Display face-feature json string in show template.

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -9,7 +9,13 @@
   <strong>Caption:</strong>
   <%= @image.caption %>
 </p>
+
+<p>
+  <strong>Face feature:</strong>
+  <%= @face_feature %>
+</p>
+
+<br>
 <%= image_tag @image.data.url %>
 <br>
-
 <%= link_to 'Back', images_path %>
