--- a/app/views/target_images/prefer.html.erb
+++ b/app/views/target_images/prefer.html.erb
@@ -24,7 +24,7 @@
     <div class="box">
       <div class="boxInner">
         <%= image[:hsv] %>
-        <%= image_tag image[:image].data.url %>
+        <%= link_to(image_tag(image[:image].data.url), { controller: 'images', action: 'show', id: image[:image].id.to_s }) %>
         <div class="titleBox"><%= image[:image].title.to_s %></div>
       </div>
     </div>
