--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
 </head>
 <body>
 
+<%= render 'shared/header' %>
+
+<hr>
+
 <%= yield %>
+
+<hr>
+
+<%= render 'shared/footer' %>
 
 </body>
 </html>
