--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -15,6 +15,8 @@
   <%= @face_feature %>
 </p>
 
+<%= link_to 'Destroy', @image, method: :delete, data: { confirm: 'Are you sure?' } %>
+
 <br>
 <%= image_tag @image.data.url %>
 <br>
