--- a/app/views/target_images/prefer.html.erb
+++ b/app/views/target_images/prefer.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing preferred images</h1>
 <p>
   <strong>Target RGB:</strong>
-  <%= @target_rgb %>
+  <%= @target_colors[:hair] %>
 </p>
 <p>
   <strong>Target HSV:</strong>
-  <%= @target_hsv %>
+  <%= @target_colors[:hair] %>
 </p>
 
 <!--
