--- a/app/views/target_images/prefer.html.erb
+++ b/app/views/target_images/prefer.html.erb
@@ -1,11 +1,15 @@
 <h1>Listing preferred images</h1>
 <p>
   <strong>Target RGB:</strong>
-  <%= @target_colors[:hair] %>
+  <% if @message == '' %>
+    <%= @target_colors[:hair] %>
+  <% end %>
 </p>
 <p>
   <strong>Target HSV:</strong>
-  <%= @target_colors[:hair] %>
+  <% if @message == '' %>
+    <%= @target_colors[:hair] %>
+  <% end %>
 </p>
 
 <!--
