--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <%= image_tag asset_path('snowmiku0.jpg'), size: '600x375' %>
 <br>
 <% if user_signed_in? %>
-  <%= link_to 'ログアウト', destroy_user_session_path %>
+  <%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %>
 <% else %>
   <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
 <% end %>
