refs #49 Fix 'signed_in' template - Edit rountes.rb - Add a link to user's home in top page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,7 @@
 <% else %>
   <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
 <% end %>
+<%= link_to('Home', { controller: 'users', action: 'home' }) %>
 <br>
 <br>
 <%= link_to('抽出画像一覧', { controller: 'images', action: 'index' }) %>
