--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -4,8 +4,8 @@
   <% @images.each do |image| %>
     <div class="box">
       <div class="boxInner">
-        <%= link_to(image_tag(image[:image].data.url), { controller: 'images', action: 'show', id: image[:image].id.to_s }) %>
-        <div class="titleBox"><%= image[:image].title.to_s %></div>
+        <%= link_to(image_tag(image.data.url), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
+        <div class="titleBox"><%= image.title.to_s %></div>
       </div>
     </div>
   <% end %>
