refs #47 Add rake tasks that create delivered_images
Deliver recommended images related to target_images to users.

--- a/app/views/users/show_target_images.html.erb
+++ b/app/views/users/show_target_images.html.erb
@@ -1,6 +1,8 @@
 <h1>YOUR target_Images</h1>
 <%= link_to 'New Target image', new_target_image_path %>
 <br>
+<%= link_to 'Back', controller: 'users', action: 'home' %>
+<br>
 
 <div class="wrap">
   <% @images.each do |target_image| %>
