refs #52 Set the favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Ispic</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= favicon_link_tag 'icepick.png' %>
   <%= csrf_meta_tags %>
   <!-- tells mobile browsers to not scale the page by default -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
