--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,2 +1,4 @@
-<h3><%= link_to('Ispic prototype', '/') %></h3>
+<div class='logo'>
+  <%= link_to image_tag(asset_path('test_logo.png')), '/', class: 'logo' %>
+</div>
 <hr>
