refs #46 Add favor action in delivered_images_controller
- Add post route
- Edit templates
- Update favored column in the action

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -15,5 +15,11 @@
   <strong>Source URL:</strong>
   <%= link_to 'source image URL', @delivered_image.src_url %>
 </p>
+
+<p>
+  <strong>Is Favored:</strong>
+  <%= @delivered_image.favored %>
+</p>
+
 <br>
 <%= image_tag @delivered_image.data.url %>
