--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -5,6 +5,9 @@
   <% @images.each do |image| %>
     <div class="box">
       <div class="boxInner">
+        <%= link_to 'Favor', controller: 'delivered_images', action: 'show', id: image.id %>
+        <%= image.favored %>
+        <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%= link_to(image_tag(image.data.url), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
         <div class="titleBox"><%= image.title.to_s %></div>
       </div>
