--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -5,7 +5,7 @@
   <% @images.each do |image| %>
     <div class="box">
       <div class="boxInner">
-        <%= link_to 'Favor', controller: 'delivered_images', action: 'show', id: image.id %>
+        <%= link_to get_clip_string(image), favor_delivered_image_path(image), method: :put%>
         <%= image.favored %>
         <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%= link_to(image_tag(image.data.url), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
