--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -1,6 +1,6 @@
-<h1>TODAY's Images</h1>
-<%= link_to('登録イラスト一覧', { controller: 'users', action: 'show_target_images' }) %>
-<%= link_to('クリップイラスト一覧', { controller: 'users', action: 'show_favored_images' }) %>
+<h1>Clipped Images</h1>
+<%= link_to 'Back', controller: 'users', action: 'home' %>
+<br>
 
 <div class="wrap">
   <% @images.each do |image| %>
