--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.favored a {
+  color: #02C293;//#02C25E;
+  float: left;
+  margin-right: 5px;
+  &:hover {
+    background-color: #fff;
+  }
+}
