--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -6,8 +6,15 @@
   <% @images.each do |image| %>
     <div class="box">
       <div class="boxInner">
-        <%= link_to get_clip_string(image), favor_delivered_image_path(image), method: :put%>
-        <%= image.favored %>
+
+        <% if image.favored %>
+          <div class='favored'>
+            <%= link_to get_clip_string(image), favor_delivered_image_path(image), method: :put%>
+          </div>
+        <% else %>
+          <%= link_to get_clip_string(image), favor_delivered_image_path(image), method: :put%>
+        <% end %>
+
         <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%= link_to(image_tag(image.data.url), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
         <div class="titleBox"><%= image.title.to_s %></div>
