refs #53 Implement download_favored_images action
In users_controller. Add a link to the action in fav illust page.

--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -1,6 +1,8 @@
 <h1>Clipped Images</h1>
 <%= link_to 'Back', controller: 'users', action: 'home' %>
 <br>
+<%= link_to 'Download zip', controller: 'users', action: 'download_favored_images' %>
+<br>
 
 <div class="wrap">
   <% @images.each do |image| %>
