refs #38 Add show_target_words action

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,5 +1,6 @@
 <h1>TODAY's Images</h1>
 <%= link_to('登録イラスト一覧', { controller: 'users', action: 'show_target_images' }) %>
+<%= link_to('登録ワード一覧', { controller: 'users', action: 'show_target_words' }) %>
 <%= link_to('クリップイラスト一覧', { controller: 'users', action: 'show_favored_images' }) %>
 
 <div class="wrap">
