--- a/app/views/target_words/index.html.erb
+++ b/app/views/target_words/index.html.erb
@@ -15,6 +15,7 @@
       <tr>
         <td><%= target_word.word %></td>
         <td><%= link_to 'Show', target_word %></td>
+        <td><%= link_to 'Prefer', prefer_target_word_path(target_word) %></td>
         <td><%= link_to 'Edit', edit_target_word_path(target_word) %></td>
         <td><%= link_to 'Destroy', target_word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
