refs #58 Edit signed_in template
And make sure it's called when the favored div is clicked.

- Add a function in users.js.coffee
- Add css classes

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.favored {
+  float: left;
+  margin-right: 5px;
+}
+.clipped {
+  color: #02C293;
+}
+.not_clipped {
+
+}
+
 .favored a {
   color: #02C293;//#02C25E;
   float: left;
