--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,10 +7,13 @@
   margin-right: 5px;
 }
 .clipped {
-  color: #02C293;
+  color: #02C293;   // Clipされている時はgreenに着色
 }
 .not_clipped {
 
+}
+.id {
+  display: none;
 }
 
 .favored a {
