--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -15,6 +15,12 @@
 .id {
   display: none;
 }
+.favored span {
+  &:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
 
 .favored a {
   color: #02C293;//#02C25E;
