--- a/app/views/target_images/edit.html.erb
+++ b/app/views/target_images/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @target_image %> |
-<%= link_to 'Back', target_images_path %>
+<%= link_to 'Back', show_target_images_users_path %>
