--- a/app/views/target_images/prefer.html.erb
+++ b/app/views/target_images/prefer.html.erb
@@ -1,5 +1,6 @@
 <%= debug @debug %>
 <h1>Listing preferred images</h1>
+<%= link_to 'Back', show_target_images_users_path %>
 <p>
   <strong>Target RGB:</strong>
   <% if @message == '' %>
