--- a/app/views/target_images/show.html.erb
+++ b/app/views/target_images/show.html.erb
@@ -5,7 +5,7 @@
   <%= @target_image.title %>
 </p>
 <%= link_to 'Edit', edit_target_image_path(@target_image) %> |
-<%= link_to 'Back', target_images_path %>
+<%= link_to 'Back', show_target_images_users_path %>
 <br>
 
 <p>
