refs #59 Fix a link in delivered_images 'show' template

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'Back', delivered_images_path %>
+<%= link_to 'Back', show_favored_images_users_path %>
 
 <p>
   <strong>Title:</strong>
