--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -3,9 +3,12 @@
 <h1>TODAY's Delivered Images</h1>
 <%= link_to('登録イラスト一覧', { controller: 'users', action: 'show_target_images' }) %>
 <%= link_to('クリップイラスト一覧', { controller: 'users', action: 'show_favored_images' }) %>
-
+<br>
+<br>
+<%= paginate @delivered_images %>
 <div class="wrap">
   <% @delivered_images.each do |image| %>
+    <% next if image.avoided %>
     <div class="box">
       <div class="boxInner">
 
@@ -14,6 +17,7 @@
           <%= raw get_clip_string_styled(image) %>
         </div>
 
+        <%= link_to 'Hide', avoid_delivered_image_path(image), method: :put %>
         <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%= link_to(image_tag(image.data.url), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
         <div class="titleBox"><%= image.title.to_s %></div>
