--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'users' %>
+<%= javascript_include_tag 'users_home' %>
 
 <h1>TODAY's Delivered Images</h1>
 <%= link_to('登録イラスト一覧', { controller: 'users', action: 'show_target_images' }) %>
