refs #66 Show attachment size of all image-related models
In show templates.
- Add helper methods
- Show total delivered_images size
- Show total favored_images size

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -17,6 +17,12 @@
 </p>
 
 <p>
+  <strong>Size in bytes:</strong><br>
+  <%= bytes_to_kilobytes(@delivered_image.data.size) %> KB<br>
+  <%= bytes_to_megabytes(@delivered_image.data.size) %> MB<br>
+</p>
+
+<p>
   <strong>Is Favored:</strong>
   <%= @delivered_image.favored %>
 </p>
