--- a/app/views/target_images/show.html.erb
+++ b/app/views/target_images/show.html.erb
@@ -12,6 +12,10 @@
   <strong>Face feature:</strong>
   <%= @face_feature %>
 </p>
-
+<p>
+  <strong>Size in bytes:</strong><br>
+  <%= bytes_to_kilobytes(@target_image.data.size) %> KB<br>
+  <%= bytes_to_megabytes(@target_image.data.size) %> MB<br>
+</p>
 <br>
 <%= image_tag @target_image.data.url %>
