refs #68 Change misc things

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -21,7 +21,7 @@
     <% next if image.avoided %>
     <div class="box">
       <div class="boxInner">
-
+        <%= image.created_at %>
         <div class="favored">
           <div class="id"><%= image.id %></div>
           <%= raw get_clip_string_styled(image) %>
