refs #38 #56 Redirect to show_target_words_path
After successful creation of a target_word.
- Fix a bug in the template

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -12,7 +12,7 @@
         <%= link_to 'Prefer', prefer_target_word_path(target_word) %>
         <%= link_to 'Edit', edit_target_word_path(target_word) %>
         <%= link_to 'Destroy', target_word, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <div class="titleBox"><%= target_word.data.to_s %></div>
+        <div class="titleBox"><%= target_word.word %></div>
       </div>
     </div>
   <% end %>
