--- a/app/views/target_words/new.html.erb
+++ b/app/views/target_words/new.html.erb
@@ -2,8 +2,8 @@
 
 <%# render 'form' %>
 <%= search_form_for @search, url: search_target_words_path, html: { method: :post } do |f| %>
-  <%= f.label :name_cont, 'キャラクタ名' %>
-  <%= f.text_field :name_cont %>
+  <%= f.label :name_display_cont, 'キャラクタ名' %>
+  <%= f.text_field :name_display_cont %>
   <div>
     <%= f.submit '検索する' %>
   </div>
@@ -19,7 +19,7 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= link_to person.name, { action: 'create', id: person.id, target_word: { word: person.name}}, method: :post %></td>
+        <td><%= link_to person.name_display, { action: 'create', id: person.id, target_word: { word: person.name_display}}, method: :post %></td>
       </tr>
     <% end %>
   </tbody>
