refs #71 Save tags in save_image function
In scrape module.
- Add has_many association between image and tag model.
- Show tags in image/show template

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -20,6 +20,14 @@
   <%= link_to 'source image URL', @image.src_url %>
 </p>
 <p>
+
+<p>
+  <strong>Tags:</strong>
+  <% @image.tags.each do |tag| %>
+  <%= tag.name %>
+  <% end %>
+</p>
+<p>
   <strong>Size in bytes:</strong><br>
   <%= bytes_to_kilobytes(@image.data.size) %> KB<br>
   <%= bytes_to_megabytes(@image.data.size) %> MB<br>
