--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -17,6 +17,11 @@
 </p>
 
 <p>
+  <strong>Delivered from:</strong>
+  <%= show_targetable(@delivered_image) %>
+</p>
+
+<p>
   <strong>Size in bytes:</strong><br>
   <%= bytes_to_kilobytes(@delivered_image.data.size) %> KB<br>
   <%= bytes_to_megabytes(@delivered_image.data.size) %> MB<br>
