--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -5,6 +5,8 @@
 <%= link_to('登録ワード一覧', { controller: 'users', action: 'show_target_words' }) %>
 <%= link_to('クリップイラスト一覧', { controller: 'users', action: 'show_favored_images' }) %>
 <br>
+<%= link_to('イラストのみ表示する', { controller: 'users', action: 'show_illusts' }) %>
+<br>
 <br>
 <p>
   <strong>Delivered images count:</strong>
