--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -16,13 +16,18 @@
 </p>
 
 <p>
+  <strong>Is an illustration:</strong>
+  <%= @image.is_illust %>
+</p>
+
+<p>
   <strong>Source URL:</strong>
   <%= link_to 'source image URL', @image.src_url %>
 </p>
 
 <p>
   <strong>Page URL:</strong>
-  <%= link_to 'source page URL', @image.page_url.html_safe %>
+  <%= link_to 'source page URL', @image.page_url.html_safe if @image.page_url %>
 </p>
 
 <p>
@@ -40,6 +45,11 @@
   <% @image.tags.each do |tag| %>
   <%= tag.name %>
   <% end %>
+</p>
+
+<p>
+  <strong>MD5:</strong><br>
+  <%= @image.md5_checksum %> <br>
 </p>
 <p>
   <strong>Size in bytes:</strong><br>
