--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -11,6 +11,7 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -19,6 +20,7 @@
       <tr>
         <td><%= target_word.word %></td>
         <td><%= link_to 'Show', target_word %></td>
+        <td><%= link_to 'ShowDelivered', show_delivered_target_word_path(target_word) %></td>
         <td><%= link_to 'Edit', edit_target_word_path(target_word) %></td>
         <td><%= link_to 'Destroy', target_word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
