refs #91 Fix failed specs

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -32,12 +32,12 @@
 
 <p>
   <strong>Views:</strong>
-  <%= @image.view_nums %>
+  <%= @image.views %>
 </p>
 
 <p>
   <strong>Posted at:</strong>
-  <%= @image.posted_time %>
+  <%= @image.posted_at %>
 </p>
 
 <p>
