refs #91 Sort delivered_images by favorites count
- Add sort_delivered_images action in users_controller

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -7,6 +7,8 @@
 <br>
 <%= link_to('イラストのみ表示する', { controller: 'users', action: 'show_illusts' }) %>
 <br>
+<%= link_to('Sort by favorites', { controller: 'users', action: 'sort_delivered_images' }) %>
+<br>
 <br>
 <p>
   <strong>Delivered images count:</strong>
