refs #91 Show favorites count in show templates
Both in delivered_images/show and images/show.

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -35,6 +35,10 @@
   <strong>Views:</strong>
   <%= @delivered_image.views %>
 </p>
+<p>
+  <strong>Favorites:</strong>
+  <%= @delivered_image.favorites %>
+</p>
 
 <p>
   <strong>Posted at:</strong>
