--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -34,6 +34,10 @@
   <strong>Views:</strong>
   <%= @image.views %>
 </p>
+<p>
+  <strong>Favorites:</strong>
+  <%= @image.favorites %>
+</p>
 
 <p>
   <strong>Posted at:</strong>
