--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -26,7 +26,8 @@
     <% next if image.avoided %>
     <div class="box">
       <div class="boxInner">
-        <%= image.created_at %>
+        <%= get_jst_string(image.created_at) + '配信' %>
+        <br>
         <div class="favored">
           <div class="id"><%= image.id %></div>
           <%= raw get_clip_string_styled(image) %>
