refs #97 Implement dynamic navigation bar
- Configure simple-navigation gem
- Add date_menu_items method in users_helper
- Change dropdown menu items dynamically

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -20,6 +20,9 @@
   <%= bytes_to_megabytes(get_total_size(current_user.delivered_images)) %> MB<br>
 </p>
 <br>
+<%= render_navigation expand_all: true, renderer: :bootstrap, &date_menu_items %>
+<%# render_navigation(expand_all: true, renderer: :bootstrap) %>
+<br>
 <%= paginate @delivered_images %>
 <div class="wrap">
   <% @delivered_images.each do |image| %>
