refs #100 #102 Sort delivered_images of the day by favorites
- Add a route that contains datetime parameters
- Call it from nav menu
- Merge parameters when it's requested to sort or show only illusts

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -5,9 +5,9 @@
 <%= link_to('登録ワード一覧', { controller: 'users', action: 'show_target_words' }) %>
 <%= link_to('クリップイラスト一覧', { controller: 'users', action: 'show_favored_images' }) %>
 <br>
-<%= link_to('イラストのみ表示する', { controller: 'users', action: 'show_illusts' }) %>
+<%= link_to 'イラストのみ表示する', request.parameters.merge({ illust: true }) %>
 <br>
-<%= link_to('Sort by favorites', { controller: 'users', action: 'sort_delivered_images' }) %>
+<%= link_to 'Sort by favorites', request.parameters.merge({ sort: true }) %>
 <br>
 <br>
 <p>
@@ -21,7 +21,6 @@
 </p>
 <br>
 <%= render_navigation expand_all: true, renderer: :bootstrap, &date_menu_items %>
-<%# render_navigation(expand_all: true, renderer: :bootstrap) %>
 <br>
 <%= paginate @delivered_images %>
 <div class="wrap">
