refs #108 Fix link paths in target_words related templates

--- a/app/views/target_words/edit.html.erb
+++ b/app/views/target_words/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @target_word %> |
-<%= link_to 'Back', target_words_path %>
+<%= link_to 'Back', show_target_words_users_path %>
