--- a/app/views/target_words/show_delivered.erb
+++ b/app/views/target_words/show_delivered.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing delivered_images of <%= @target_word.word %></h1>
 <br>
-<%= link_to 'Back', show_favored_images_users_path %>
+<%= link_to 'Back', :back %>
 <br>
 <br>
 <div class="wrap">
