refs #110 Make favorites value conspicuous

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -39,7 +39,7 @@
     </tr>
     <tr>
       <th align="left">Favorites</th>
-      <td><%= @delivered_image.favorites %></td>
+      <td><strong><%= @delivered_image.favorites %></strong></td>
     </tr>
     <tr>
       <th align="left">Created_at</th>
