refs #110 Improve user related view templates
- Fix string in 'signed_in' template
- Implement get_enabled_html method in users_helper module
- Improve 'show_target_words' template

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -16,7 +16,7 @@
   <%= bytes_to_kilobytes(get_total_size(current_user.delivered_images)) %> KB<br>
   <%= bytes_to_megabytes(get_total_size(current_user.delivered_images)) %> MB<br>
 </p>
-<p>※「Lists」→「登録タグ一覧」からタグ登録すると、定期的にタグに関する画像が配信されます</p>
+<p>※「Lists」→「登録ワード一覧」からタグ登録すると、定期的にタグに関する画像が配信されます</p>
 <br>
 <%= render_navigation expand_all: true, renderer: :bootstrap, &date_menu_items %>
 <br>
