refs #130 Use hash to generate simple-navigation items
Add related specs in users_helper_spec.

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -18,7 +18,7 @@
 </p>
 <p>※「Lists」→「登録ワード一覧」からタグ登録すると、定期的にタグに関する画像が配信されます</p>
 <br>
-<%= render_navigation expand_all: true, renderer: :bootstrap, &date_menu_items %>
+<%= render_navigation expand_all: true, renderer: :bootstrap, items: get_menu_items %>
 <br>
 <%= paginate @delivered_images %>
 <div class="wrap">
