--- a/app/views/target_words/search.html.erb
+++ b/app/views/target_words/search.html.erb
@@ -18,7 +18,8 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= link_to person.name_display, { action: 'create', id: person.id, target_word: { word: person.name_display}}, method: :post %></td>
+        <td><%= link_to person.name_display, { action: 'create', id: person.id, target_word: { word: person.name_display }}, method: :post %></td>
+        <td><%= person.titles.first.name if not person.titles.empty? %></td>
       </tr>
     <% end %>
   </tbody>
