--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,27 +1,17 @@
 <%= javascript_include_tag 'users_home' %>
 
-<h1>TODAY's Delivered Images</h1>
-<br>
-<%= link_to 'イラストのみ表示する', request.parameters.merge({ illust: true }) %>
-<br>
-<%= link_to 'Favorites順にする', request.parameters.merge({ sort: true }) %>
-<br>
-<%= link_to 'べた塗り度順にする', request.parameters.merge({ sort_quality: true }) %>
-<br>
-<br>
+<h3>TODAY's Delivered Images</h3>
+<%= link_to 'Favorites順にする', { controller: 'users', action: 'home', sort: true } %>
+/
+<%= link_to '書き込み度順にする', { controller: 'users', action: 'home', sort_quality: true }  %>
+/
+<%= link_to 'イラスト判定のデバッグを行う', request.parameters.merge({ sort_quality: true }) %>
+
 <p>
   <strong>Delivered images count:</strong>
   <%= current_user.delivered_images.count %>
 </p>
-<p>
-  <strong>Total size of delivered images in bytes:</strong><br>
-  <%= bytes_to_kilobytes(get_total_size(current_user.delivered_images)) %> KB<br>
-  <%= bytes_to_megabytes(get_total_size(current_user.delivered_images)) %> MB<br>
-</p>
-<p>※「Lists」→「登録ワード一覧」からタグ登録すると、定期的にタグに関する画像が配信されます</p>
-<br>
-<%= render_navigation expand_all: true, renderer: :bootstrap, items: get_menu_items %>
-<br>
+
 <%= paginate @delivered_images %>
 <div class="wrap">
   <% @delivered_images.each do |delivered_image| %>
